--- a/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Assembly-CSharp-Editor-firstpass.csproj
@@ -55,16 +55,16 @@
   <ItemGroup>
      <Compile Include="Assets\Plugins\Editor\JetBrains\Unity3DRider.cs" />
  <Reference Include="UnityEditor.StandardEvents">
- <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/rouge like/emotion/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/emotion/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/rouge like/emotion/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/emotion/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/rouge like/emotion/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/emotion/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/rouge like/emotion/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/emotion/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/install/unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
