--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\enemy\enemyUnit.cs" />
+     <Compile Include="Assets\Scripts\count\consumeCount.cs" />
+     <Compile Include="Assets\Scripts\count\consumeManager.cs" />
      <Compile Include="Assets\Scripts\manager\Card.cs" />
      <Compile Include="Assets\Scripts\manager\cardController.cs" />
      <Compile Include="Assets\Scripts\manager\executeManager.cs" />
@@ -61,12 +62,11 @@
      <Compile Include="Assets\Scripts\manager\expenseManager.cs" />
      <Compile Include="Assets\Scripts\manager\Health.cs" />
      <Compile Include="Assets\Scripts\manager\healthManager.cs" />
-     <Compile Include="Assets\Scripts\player\objectUnit.cs" />
-     <Compile Include="Assets\Scripts\player\playerController.cs" />
-     <Compile Include="Assets\Scripts\player\playerUnit.cs" />
      <Compile Include="Assets\Scripts\scene_\sceneManager.cs" />
      <Compile Include="Assets\Scripts\system\battleSystem.cs" />
      <Compile Include="Assets\Scripts\UI\UIController.cs" />
+     <Compile Include="Assets\Scripts\Unit\objectUnit.cs" />
+     <Compile Include="Assets\Scripts\Unit\peopleUnit.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>C:/Users/31311/Desktop/组织学习/冰岩/项目夹/emotion/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
